--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1> Why I want to become a developer? </h1>
+	<p> Technology is extremely fast moving, so it is important to adapt to the continually changing environment.
+		It is also very interesting to learn new things with new challenges, which initially attracted me to become a developer. </p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
